# agentic-ecommerce

./: .gitignore  Dockerfile  README.md  agents.ipynb  catalog.json  deploy.sh  pyproject.toml  requirements.txt  web_server.py
ecommerce_agent/: agent.py
ecommerce_agent/nodes/: edges.py  memory_node.py  nodes.py
ecommerce_agent/schemas/: user_profile.py
ecommerce_agent/states/: default_state.py
ecommerce_agent/tools/: retrieve_catalog.py
terraform-gcp/environments/dev/: provider.tf  terraform.tfvars
terraform-gcp/modules/cloudsql/: main.tf
